--- a/emails.html
+++ b/emails.html
@@ -11,8 +11,8 @@
         .hidden { display: none !important; }
         .email-box { background: #f9f9f9; padding: 20px; border: 1px solid #ddd; margin-top: 20px; border-radius: 8px; }
         #email-content { white-space: pre-wrap; font-family: Arial, sans-serif; line-height: 1.5; }
-        .date-group { display: flex; gap: 10px; flex-wrap: wrap; }
-        .date-group div { flex: 1; min-width: 150px; }
+        label { display: block; margin-top: 10px; font-weight: bold; }
+        input, select { width: 100%; padding: 8px; margin-top: 5px; box-sizing: border-box; }
     </style>
 </head>
 <body>
@@ -27,15 +27,12 @@
                     <div class="dropdown-content">
                         <a href="/Wdc-Ajudas/atalhos.html">Atalhos</a>
                         <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
-                        <hr>
-                        <a href="/Wdc-Ajudas/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
-                        <a href="/Wdc-Ajudas/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
-                        <a href="/Wdc-Ajudas/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
+                        <a href="/Wdc-Ajudas/adds.html">Adicionar S</a>
+                        <a href="/Wdc-Ajudas/garantia.html">Definir Garantia</a>
                     </div>
                 </li>
             </ul>
         </nav>
-        <input type="text" placeholder="Pesquisar..." class="search-bar">
     </header>
 
     <main class="content">
@@ -50,7 +47,7 @@
             </select>
 
             <div id="sac-options" class="hidden">
-                <label for="sac-template">Escolha o tipo de SAC:</label>
+                <label for="sac-template">Tipo de SAC:</label>
                 <select id="sac-template">
                     <option value="">Selecione</option>
                     <option value="devolucao">Devolução</option>
@@ -71,7 +68,24 @@
                     <option value="">Selecione</option>
                     <option value="relatorio_geral">Relatório Geral</option>
                     <option value="pendencias">Transportadoras - Pendências</option>
+                    <option value="pendencias_lista">Transportadoras - Pendências com lista</option>
+                    <option value="nfs_retidas">NFs retidas - Notificação ao cliente</option>
+                    <option value="ticket_correios">Ticket Correios - Geral</option>
                 </select>
+            </div>
+
+            <div id="pendencias-options" class="hidden">
+                <label for="edi-select">EDI:</label>
+                <input type="text" id="edi-select">
+                <label for="nf-select">NF:</label>
+                <input type="text" id="nf-select">
+            </div>
+
+            <div id="recusa-nf-options" class="hidden">
+                <label for="nf-recusa-input">NF:</label>
+                <input type="text" id="nf-recusa-input">
+                <label for="descricao-recusa-input">Situação/Descrição:</label>
+                <input type="text" id="descricao-recusa-input">
             </div>
 
             <div id="destinatario-container" class="hidden">
@@ -95,7 +109,7 @@
             <div id="rma-fields" class="hidden">
                 <label for="crg-input">N° do CRG:</label>
                 <input type="text" id="crg-input">
-                <label for="anexo-info-input">Informação do Anexo (Ex: Planilha de Crédito):</label>
+                <label for="anexo-info-input">Informação do Anexo:</label>
                 <input type="text" id="anexo-info-input">
             </div>
 
@@ -112,12 +126,9 @@
                 <input type="text" id="descricao-input">
             </div>
 
-            <div id="pdaf-options" class="hidden">
+            <div id="pdaf-options" class="hidden"> 
                 <label for="tipo-select">Tipo:</label>
-                <select id="tipo-select">
-                    <option value="PD">PD</option>
-                    <option value="AF">AF</option>
-                </select>
+                <select id="tipo-select"><option value="PD">PD</option><option value="AF">AF</option></select>
                 <label for="nfs-input">NFs:</label>
                 <input type="text" id="nfs-input">
                 <label for="ean-input">EAN:</label>
@@ -133,25 +144,25 @@
                     <option value="primeiro_ticket">Primeira emissão</option>
                     <option value="ticket_expirado">Ticket Expirado</option>
                 </select>
-
+                
                 <div id="campos-exclusivos-correios">
                     <label for="produto-desc-input">Descrição do Produto:</label>
                     <input type="text" id="produto-desc-input">
-                    <label for="data-emissao-input">Data de Recebimento / Emissão:</label>
-                    <input type="tel" id="data-emissao-input" placeholder="DD/MM/AAAA">
+                    <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
+                    <input type="tel" id="data-emissao-input" maxlength="10">
                 </div>
 
                 <div id="primeiro-ticket-options" class="hidden">
                     <label for="nf-input-postagem">NF de Compra / Retorno:</label>
                     <input type="text" id="nf-input-postagem">
-                    <label for="ticket-input">Número do Ticket:</label>
+                    <label for="ticket-input">Ticket:</label>
                     <input type="text" id="ticket-input">
                     <label for="data-validade-input">Data de Validade:</label>
-                    <input type="tel" id="data-validade-input" placeholder="DD/MM/AAAA">
+                    <input type="tel" id="data-validade-input" maxlength="10">
                 </div>
 
                 <div id="ticket-expirado-options" class="hidden">
-                    <label for="ticket-expirado-input">Ticket Anterior (Expirado):</label>
+                    <label for="ticket-expirado-input">Ticket Expirado Anterior:</label>
                     <input type="text" id="ticket-expirado-input">
                     <label for="ticket-input-expired">Novo Ticket:</label>
                     <input type="text" id="ticket-input-expired">
@@ -162,23 +173,16 @@
                 </div>
             </div>
 
-            <div id="recusa-nf-options" class="hidden">
-                <label for="nf-recusa-input">NF:</label>
-                <input type="text" id="nf-recusa-input">
-                <label for="descricao-recusa-input">Situação da Recusa:</label>
-                <input type="text" id="descricao-recusa-input">
-            </div>
-
             <div id="email-preview" class="email-box hidden">
                 <h3>Pré-visualização do E-mail</h3>
                 <div id="email-content"></div>
-                <button id="copy-email" style="margin-top:15px; padding:10px; cursor:pointer;">Copiar E-mail</button>
+                <button id="copy-email">Copiar E-mail</button>
             </div>
-
         </div>
     </main>
 
     <script src="/Wdc-Ajudas/JS/sac.js"></script>
+    <script src="/Wdc-Ajudas/JS/apoio_vendas.js"></script>
     <script src="/Wdc-Ajudas/JS/emails.js"></script>
 </body>
 </html>
