--- a/emails.html
+++ b/emails.html
@@ -74,13 +74,6 @@
                 </select>
             </div>
 
-            <div id="pendencias-options" class="hidden">
-                <label for="edi-select">EDI:</label>
-                <input type="text" id="edi-select">
-                <label for="nf-select">NF:</label>
-                <input type="text" id="nf-select">
-            </div>
-
             <div id="destinatario-container" class="hidden">
                 <label for="destinatario">Destinatário:</label>
                 <select id="destinatario">
@@ -102,7 +95,7 @@
             <div id="rma-fields" class="hidden">
                 <label for="crg-input">N° do CRG:</label>
                 <input type="text" id="crg-input">
-                <label for="anexo-info-input">Informação do Anexo (Ex: Carta de Correção):</label>
+                <label for="anexo-info-input">Informação do Anexo:</label>
                 <input type="text" id="anexo-info-input">
             </div>
 
@@ -115,29 +108,15 @@
                 <input type="text" id="quantidade-input">
                 <label for="ncm-input">NCM:</label>
                 <input type="text" id="ncm-input">
-                <label for="descricao-input">Descrição do Item:</label>
+                <label for="descricao-input">Descrição do Item / Produto(s):</label>
                 <input type="text" id="descricao-input">
             </div>
 
-            <div id="pdaf-options" class="hidden"> 
-                <label for="tipo-select">Tipo:</label>
-                <select id="tipo-select">
-                    <option value="PD">PD</option>
-                    <option value="AF">AF</option>
-                </select>
-                <label for="nfs-input">NFs:</label>
-                <input type="text" id="nfs-input">
-                <label for="ean-input">EAN:</label>
-                <input type="text" id="ean-input">
-                <label for="swqt-input">SW/QT:</label>
-                <input type="text" id="swqt-input">
-            </div>
-
-            <div id="recusa-nf-options" class="hidden">
-                <label for="nf-recusa-input">NF:</label>
-                <input type="text" id="nf-recusa-input">
-                <label for="descricao-recusa-input">Situação/Descrição:</label>
-                <input type="text" id="descricao-recusa-input">
+            <div id="campos-exclusivos-correios" class="hidden">
+                <label for="produto-desc-input">Descrição do Produto:</label>
+                <input type="text" id="produto-desc-input">
+                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
+                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
 
             <div id="ticket-correios-options" class="hidden">
@@ -147,13 +126,6 @@
                     <option value="primeiro_ticket">Primeira emissão</option>
                     <option value="ticket_expirado">Ticket Expirado</option>
                 </select>
-            </div>
-
-            <div id="campos-exclusivos-correios" class="hidden">
-                <label for="produto-desc-input">Descrição do Produto:</label>
-                <input type="text" id="produto-desc-input">
-                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
-                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
 
             <div id="primeiro-ticket-options" class="hidden">
@@ -174,6 +146,31 @@
                 <input type="tel" id="data-emissao-input-expired" placeholder="dd/mm/aaaa">
                 <label for="data-validade-input-expired">Nova Data Validade:</label>
                 <input type="tel" id="data-validade-input-expired" placeholder="dd/mm/aaaa">
+            </div>
+
+            <div id="pdaf-options" class="hidden"> 
+                <label for="tipo-select">Tipo:</label>
+                <select id="tipo-select"><option value="PD">PD</option><option value="AF">AF</option></select>
+                <label for="nfs-input">NFs:</label>
+                <input type="text" id="nfs-input">
+                <label for="ean-input">EAN:</label>
+                <input type="text" id="ean-input">
+                <label for="swqt-input">SW/QT:</label>
+                <input type="text" id="swqt-input">
+            </div>
+
+            <div id="recusa-nf-options" class="hidden">
+                <label for="nf-recusa-input">NF:</label>
+                <input type="text" id="nf-recusa-input">
+                <label for="descricao-recusa-input">Situação/Descrição:</label>
+                <input type="text" id="descricao-recusa-input">
+            </div>
+
+            <div id="pendencias-options" class="hidden">
+                <label for="edi-select">EDI:</label>
+                <input type="text" id="edi-select">
+                <label for="nf-select">NF:</label>
+                <input type="text" id="nf-select">
             </div>
 
             <div id="email-preview" class="email-box hidden">
