--- a/emails.html
+++ b/emails.html
@@ -13,6 +13,8 @@
         #email-content { white-space: pre-wrap; font-family: Arial, sans-serif; line-height: 1.5; color: #000; }
         label { display: block; margin-top: 10px; font-weight: bold; }
         input, select { width: 100%; padding: 8px; margin-top: 5px; box-sizing: border-box; }
+        #copy-email { width: 100%; margin-top: 20px; padding: 10px; cursor: pointer; background-color: #007bff; color: white; border: none; border-radius: 4px; font-weight: bold; }
+        #copy-email:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
@@ -45,6 +47,13 @@
                 <option value="sac">SAC</option>
                 <option value="apoio_vendas">Apoio a Vendas</option>
             </select>
+
+            <div id="campos-sempre-visiveis">
+                <label for="produto-desc-input">Descrição do Produto:</label>
+                <input type="text" id="produto-desc-input">
+                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
+                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
+            </div>
 
             <div id="sac-options" class="hidden">
                 <label for="sac-template">Tipo de SAC:</label>
@@ -100,23 +109,10 @@
             </div>
 
             <div id="solar-options" class="hidden">
-                <label for="nf-input">NF:</label>
-                <input type="text" id="nf-input">
-                <label for="valor-unitario-input">Valor Unitário:</label>
-                <input type="text" id="valor-unitario-input">
                 <label for="quantidade-input">Quantidade:</label>
                 <input type="text" id="quantidade-input">
-                <label for="ncm-input">NCM:</label>
-                <input type="text" id="ncm-input">
                 <label for="descricao-input">Descrição do Item / Produto(s):</label>
                 <input type="text" id="descricao-input">
-            </div>
-
-            <div id="campos-exclusivos-correios" class="hidden">
-                <label for="produto-desc-input">Descrição do Produto:</label>
-                <input type="text" id="produto-desc-input">
-                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
-                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
 
             <div id="ticket-correios-options" class="hidden">
@@ -176,8 +172,9 @@
             <div id="email-preview" class="email-box hidden">
                 <h3>Pré-visualização do E-mail</h3>
                 <div id="email-content"></div>
-                <button id="copy-email" style="margin-top: 20px;">Copiar E-mail</button>
             </div>
+            
+            <button id="copy-email" class="hidden">Copiar E-mail</button>
         </div>
     </main>
 
