--- a/emails.html
+++ b/emails.html
@@ -48,7 +48,7 @@
                 <option value="apoio_vendas">Apoio a Vendas</option>
             </select>
 
-            <div id="campos-sempre-visiveis">
+            <div id="campos-sempre-visiveis" class="hidden">
                 <label for="produto-desc-input">Descrição do Produto:</label>
                 <input type="text" id="produto-desc-input">
                 <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
