--- a/emails.html
+++ b/emails.html
@@ -71,6 +71,13 @@
                 </select>
             </div>
 
+            <div id="advanced-fields" class="hidden">
+                <label for="advanced-produto-info">Informação do Produto (Trocado em Advanced):</label>
+                <input type="text" id="advanced-produto-info">
+                <label for="advanced-data-recebimento">Data de Recebimento:</label>
+                <input type="tel" id="advanced-data-recebimento" placeholder="dd/mm/aaaa" maxlength="10">
+            </div>
+
             <div id="apoio-vendas-options" class="hidden">
                 <label for="apoio-vendas-template">Tipo de Apoio a Vendas:</label>
                 <select id="apoio-vendas-template">
@@ -125,8 +132,6 @@
             </div>
 
             <div id="primeiro-ticket-options" class="hidden">
-                <label for="nf-input-postagem">NF de Compra / Retorno:</label>
-                <input type="text" id="nf-input-postagem">
                 <label for="ticket-input">Ticket:</label>
                 <input type="text" id="ticket-input">
                 <label for="data-validade-input">Data de Validade:</label>
