--- a/emails.html
+++ b/emails.html
@@ -72,9 +72,9 @@
             </div>
 
             <div id="advanced-fields" class="hidden">
-                <label for="advanced-produto-info">Informação do Produto (Trocado em Advanced):</label>
-                <input type="text" id="advanced-produto-info">
-                <label for="advanced-data-recebimento">Data de Recebimento:</label>
+                <label for="advanced-produto-input">Informação do Produto (Advanced):</label>
+                <input type="text" id="advanced-produto-input" placeholder="Ex: Câmera IP Dome...">
+                <label for="advanced-data-recebimento">Data que identificamos o recebimento:</label>
                 <input type="tel" id="advanced-data-recebimento" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
 
@@ -132,6 +132,8 @@
             </div>
 
             <div id="primeiro-ticket-options" class="hidden">
+                <label for="data-emissao-ticket-input">Data de Emissão:</label>
+                <input type="tel" id="data-emissao-ticket-input" placeholder="dd/mm/aaaa" maxlength="10">
                 <label for="ticket-input">Ticket:</label>
                 <input type="text" id="ticket-input">
                 <label for="data-validade-input">Data de Validade:</label>
