--- a/emails.html
+++ b/emails.html
@@ -73,7 +73,7 @@
 
             <div id="advanced-fields" class="hidden">
                 <label for="advanced-produto-input">Informação do Produto (Advanced):</label>
-                <input type="text" id="advanced-produto-input" placeholder="Ex: Câmera IP Dome...">
+                <input type="text" id="advanced-produto-input" placeholder="Referente ao envio do seu produto...">
                 <label for="advanced-data-recebimento">Data que identificamos o recebimento:</label>
                 <input type="tel" id="advanced-data-recebimento" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
