--- a/emails.html
+++ b/emails.html
@@ -48,13 +48,6 @@
                 <option value="apoio_vendas">Apoio a Vendas</option>
             </select>
 
-            <div id="campos-sempre-visiveis" class="hidden">
-                <label for="produto-desc-input">Descrição do Produto:</label>
-                <input type="text" id="produto-desc-input">
-                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
-                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
-            </div>
-
             <div id="sac-options" class="hidden">
                 <label for="sac-template">Tipo de SAC:</label>
                 <select id="sac-template">
@@ -71,11 +64,11 @@
                 </select>
             </div>
 
-            <div id="advanced-fields" class="hidden">
-                <label for="advanced-produto-input">Informação do Produto (Advanced):</label>
-                <input type="text" id="advanced-produto-input" placeholder="Referente ao envio do seu produto...">
-                <label for="advanced-data-recebimento">Data que identificamos o recebimento:</label>
-                <input type="tel" id="advanced-data-recebimento" placeholder="dd/mm/aaaa" maxlength="10">
+            <div id="campos-exclusivos-correios" class="hidden">
+                <label for="produto-desc-input">Descrição do Produto:</label>
+                <input type="text" id="produto-desc-input" placeholder="Ex: ONU Huawei">
+                <label for="data-emissao-input">Data de Emissão / Recebimento:</label>
+                <input type="tel" id="data-emissao-input" placeholder="dd/mm/aaaa" maxlength="10">
             </div>
 
             <div id="apoio-vendas-options" class="hidden">
@@ -112,10 +105,16 @@
                 <label for="crg-input">N° do CRG:</label>
                 <input type="text" id="crg-input">
                 <label for="anexo-info-input">Informação do Anexo:</label>
-                <input type="text" id="anexo-info-input">
+                <input type="text" id="anexo-info-input" placeholder="Ex: Planilha de RMA">
             </div>
 
             <div id="solar-options" class="hidden">
+                <label for="nf-input">Número da NF:</label>
+                <input type="text" id="nf-input">
+                <label for="valor-unitario-input">Valor Unitário:</label>
+                <input type="text" id="valor-unitario-input">
+                <label for="ncm-input">NCM:</label>
+                <input type="text" id="ncm-input">
                 <label for="quantidade-input">Quantidade:</label>
                 <input type="text" id="quantidade-input">
                 <label for="descricao-input">Descrição do Item / Produto(s):</label>
@@ -132,9 +131,9 @@
             </div>
 
             <div id="primeiro-ticket-options" class="hidden">
-                <label for="data-emissao-ticket-input">Data de Emissão:</label>
-                <input type="tel" id="data-emissao-ticket-input" placeholder="dd/mm/aaaa" maxlength="10">
-                <label for="ticket-input">Ticket:</label>
+                <label for="nf-input-postagem">NF de compra:</label>
+                <input type="text" id="nf-input-postagem">
+                <label for="ticket-input">Número do e-ticket:</label>
                 <input type="text" id="ticket-input">
                 <label for="data-validade-input">Data de Validade:</label>
                 <input type="tel" id="data-validade-input" placeholder="dd/mm/aaaa" maxlength="10">
@@ -179,9 +178,9 @@
             <div id="email-preview" class="email-box hidden">
                 <h3>Pré-visualização do E-mail</h3>
                 <div id="email-content"></div>
+                <button id="copy-email">Copiar E-mail</button>
             </div>
             
-            <button id="copy-email" class="hidden">Copiar E-mail</button>
         </div>
     </main>
 
