--- a/emails.html
+++ b/emails.html
@@ -23,7 +23,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="/Wdc-Ajudas/index.html">Página Principal</a></li>
-                <li><a href="emails.html">Script de E-mails</a></li>
+                
+                <li><a href="/Wdc-Ajudas/emails.html">Script de E-mails</a></li>
+
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Automação/Atalhos</a>
                     <div class="dropdown-content">
@@ -31,10 +33,28 @@
                         <a href="/Wdc-Ajudas/comprar-lista.html">Comparar Lista</a>
                         <a href="/Wdc-Ajudas/adds.html">Adicionar S</a>
                         <a href="/Wdc-Ajudas/garantia.html">Definir Garantia</a>
+                        <a href="/Wdc-Ajudas/verificarnf.html">Verificar NF</a>
+                        <a href="/Wdc-Ajudas/revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="/Wdc-Ajudas/conferencia-valores.html">Conferir Valores Unitário</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Pesquisas</a>
+                    <div class="dropdown-content">
+                        <a href="/Wdc-Ajudas/pesquisas/serial.html">Pesquisa Serial</a>
+                        <a href="/Wdc-Ajudas/pesquisas/lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="/Wdc-Ajudas/pesquisas/os.html">Abrir OS</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf.html">Baixar NF</a>
+                        <a href="/Wdc-Ajudas/pesquisas/visao.html">Romaneio Visão</a>
+                        <a href="/Wdc-Ajudas/pesquisas/garantiafabricante.html">Pesquisa Fabricante</a>
+                        <a href="/Wdc-Ajudas/pesquisas/cliente-protheus.html">Pesquisa Contato Cliente</a>
+                        <a href="/Wdc-Ajudas/pesquisas/nf-remessa.html">Pesquisa NF Remessa</a>
+                        <a href="/Wdc-Ajudas/pesquisas/serial-kit.html">Pesquisa Serial KIT</a>
                     </div>
                 </li>
             </ul>
         </nav>
+        <input type="text" placeholder="Pesquisar..." class="search-bar">
     </header>
 
     <main class="content">
@@ -189,3 +209,4 @@
     <script src="/Wdc-Ajudas/JS/emails.js"></script>
 </body>
 </html>
+
